--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
    
-    <div class="container">
         <div class="calculator">
             <h1>Calculadora</h1>
-            <input id="resultado" type="text">
+            <input id="resultado" type="text" disabled>
             <table>
                 <tr>
                     <td>C</td>
@@ -44,7 +43,6 @@
                 </tr>
             </table>
         </div>
-    </div>
     
 </body>
 </html>
