--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
             <input id="resultado" type="text" disabled>
             <table>
                 <tr>
-                    <td>C</td>
-                    <td><</td>
-                    <td>/</td>
-                    <td>X</td>
+                    <td><button class="btn">C</button></td>
+                    <td><button class="btn"><</button></td>
+                    <td><button class="btn">/</button></td>
+                    <td><button class="btn">X</button></td>
                 </tr>
                 <tr>
-                    <td>7</td>
-                    <td>8</td>
-                    <td>9</td>
-                    <td>-</td>
+                    <td><button class="btn">7</button></td>
+                    <td><button class="btn">8</button></td>
+                    <td><button class="btn">9</button></td>
+                    <td><button class="btn">-</button></td>
                 </tr>
                 <tr>
-                    <td>4</td>
-                    <td>5</td>
-                    <td>6</td>
-                    <td>+</td>
+                    <td><button class="btn">4</button></td>
+                    <td><button class="btn">5</button></td>
+                    <td><button class="btn">6</button></td>
+                    <td><button class="btn">+</button></td>
                 </tr>
                 <tr>
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
-                    <td rowspan="2">=</td>
+                    <td><button class="btn">1</button></td>
+                    <td><button class="btn">2</button></td>
+                    <td><button class="btn">3</button></td>
+                    <td rowspan="2"><button id="btnIgual" class="btn">=</button></td>
                 </tr>
                 <tr>
-                    <td colspan="2">0</td>
-                    <td>.</td>
+                    <td colspan="2"><button id="btn0" class="btn">0</button></td>
+                    <td><button class="btn">.</button></td>
                 </tr>
             </table>
         </div>
