--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <td><button class="btn" onclick="insert('1')">1</button></td>
                     <td><button class="btn" onclick="insert('2')">2</button></td>
                     <td><button class="btn" onclick="insert('3')">3</button></td>
-                    <td rowspan="2"><button id="btnIgual" class="btn">=</button></td>
+                    <td rowspan="2"><button id="btnIgual" class="btn" onclick="calcular()">=</button></td>
                 </tr>
                 <tr>
                     <td colspan="2"><button id="btn0" class="btn" onclick="insert('0')">0</button></td>
